core: started using swagger
